# business-strategy-simulator-saas

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  backend.Dockerfile  baseline.py  docker-compose.yml  environment.py  graders.py  openenv.yaml  pyproject.toml  requirements.txt  run_server.py  server.py  start.sh  structure.txt
alembic/: env.py
alembic/versions/: 1b6ffb74670a_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  simulation.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: simulation.py
backend/app/schemas/: simulation.py  user.py
backend/app/services/: simulation_service.py
backend/tests/: conftest.py  test_auth.py  test_simulation.py
business_strategy_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAuthStore.ts
server/: __init__.py  app.py  environment.py
server/tamplates/: dashboard.html
