[project]
name = "business-strategy-env"
version = "1.0.0"
description = "A real-world business strategy simulation OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.openenv]
name = "business-strategy-env"
version = "1.0.0"
entrypoint = "server:main"
port = 7860
tasks = ["survive", "grow_market_share", "scale_profitably"]